# VGM-Tools

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  adpcm.c  adpcmb.c  feropm.py  neoadpcmextract.cpp  sinharmonicswt.py
aiftools/: CMakeLists.txt  aifsampconv.c
common/: CMakeLists.txt  aiff.c  aiff.h  aiffdefs.h  endian.h  iff.h  riffwriter.py  stream.c  stream.h  streamfile.c  util.h  wave.c  wave.h  wavedefs.h  wavefile.c  wavesampler.py  waveserum.py  wavewriter.py
dsptools/: CMakeLists.txt  LICENSE  common.h  decode.c  dspdecode.c  dsptool.h  encode.c  math.c  wave.c  wave.h  wavefile.c
dsptools/libdsptool/: CMakeLists.txt  common.h  decode.c  dsptool.h  encode.c  math.c
neotools/: .gitignore  CMakeLists.txt  README.md  adpcm.Makefile  adpcm.c  adpcm.h  adpcm.txt  adpcmb.Makefile  adpcmb.c  adpcmb.h  autoextract.bat  autoextract.c  autoextract.sh  gzstreamfile.c  libadpcma.c  libadpcmb.c  neoadpcmextract.Makefile  neoadpcmextract.c  neoadpcmextract.cpp  neoadpcmextract.h
spctools/: ripsamples.py
spctools/spc2it/: .gitignore  CMakeLists.txt  Makefile  README.md  readme.md
